snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
124f05e1bbeadbe0eee2ef42b2459736d6835f907cbca3bd1965d2bde54dd0af